# school

./: .gitignore  Anchor.toml  INSTALLATION.md  QUICKSTART.md  README.md  setup.sh
frontend/: .env.example  next.config.js  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/layout/: Navigation.tsx
frontend/src/components/marketplace/: CreateListingModal.tsx  CreateUserModal.tsx  ListingCard.tsx  MarketplaceFilters.tsx
frontend/src/components/messaging/: MessagingProvider.tsx
frontend/src/components/ui/: button.tsx
frontend/src/components/wallet/: WalletProvider.tsx
frontend/src/lib/: anchor.ts  sas.ts  utils.ts
frontend/src/store/: useMarketplaceStore.ts
frontend/src/types/: marketplace.ts
programs/marketplace/: Cargo.toml
programs/marketplace/src/: lib.rs
tests/: marketplace.ts
