[package]
name = "marketplace"
version = "0.1.0"
description = "Solana marketplace smart contract with reputation system"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "marketplace"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
spl-token = "3.5.0"
spl-associated-token-account = "1.1.2"
mpl-token-metadata = "1.13.1"
solana-program = "1.16.0"
clockwork-sdk = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"